--- a/templates/Drug_Drug.html
+++ b/templates/Drug_Drug.html
@@ -85,6 +85,19 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
+        <!-- ====== File upload ===== -->
+    <section id="fileupload" class="fileupload">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <form action="http://localhost:5000//Drug_Drug.html" method="post" enctype="multipart/form-data">
+            Select file to upload:
+            <input type="file" name="fileToUpload" id="fileToUpload">
+            <input type="submit" value="Upload file" name="submit">
+          </form>
+      </div>
+        </div>
+    </section><!-- End File upload -->
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
