--- a/templates/Gene_Disease.html
+++ b/templates/Gene_Disease.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pricing - Sailor Bootstrap Template</title>
+  <title>BRET-Gene_Disease</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
