--- a/templates/Drug_Drug.html
+++ b/templates/Drug_Drug.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio - Sailor Bootstrap Template</title>
+  <title>BRET-Drug_Drug</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -91,8 +91,9 @@
         <div class="d-flex justify-content-between align-items-center">
           <form action="http://localhost:5000//Drug_Drug.html" method="post" enctype="multipart/form-data">
             Select file to upload:
-            <input type="file" name="fileToUpload" id="fileToUpload">
-            <input type="submit" value="Upload file" name="submit">
+            <input type="file" name="fileToUpload" id="fileToUpload" >
+            <input type="submit" value="Upload file" name="submit" class="btn btn-danger" >
+
           </form>
       </div>
         </div>
