--- a/templates/Gene_Disease.html
+++ b/templates/Gene_Disease.html
@@ -87,7 +87,21 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Pricing Section ======= -->
-    
+
+    <!-- ====== File upload ===== -->
+    <section id="fileupload" class="fileupload">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <form action="http://localhost:5000//Drug_Drug.html" method="post" enctype="multipart/form-data">
+            Select file to upload:
+            <input type="file" name="fileToUpload" id="fileToUpload" >
+            <input type="submit" value="Upload file" name="submit" class="btn btn-danger" >
+
+          </form>
+      </div>
+        </div>
+    </section>
+    <!-- End File upload -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq">
