file upload and receive result file

--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -106,7 +106,7 @@
         <button type="button" class="btn btn-danger">Download</button>
         <button type="button" class="btn btn-danger">About labels</button>
         <p>
-          <textarea cols="120" rows="10" readonly="readonly">Result</textarea>
+          <textarea cols="120" rows="10" readonly="readonly">&nbsp;{{model_result}}&nbsp;</textarea>
 
 
         </p>
