--- a/templates/Drug_Drug.html
+++ b/templates/Drug_Drug.html
@@ -102,7 +102,8 @@
           </form>
       </div>
         <div> &nbsp; </div>
-        <button type="button" class="btn btn-danger">Download</button>
+        <a href = "static/result/DrugDrug_result.txt" download = "Drug_Drug Relation Extraction Result.txt"><button type=button class="btn btn-danger">Download</button></a>
+        
         <button type="button" class="btn btn-danger">About labels</button>
         <p>
           <textarea cols="120" rows="10" readonly="readonly">&nbsp;{{model_result}}&nbsp;</textarea>
