--- a/templates/Gene_Disease.html
+++ b/templates/Gene_Disease.html
@@ -103,7 +103,7 @@
           </form>
       </div>
         <div> &nbsp; </div>
-        <button type="button" class="btn btn-danger">Download</button>
+        <a href = "static/result/GeneDis_result.txt" download = "Gene_Disease Relation Extraction Result.txt"><button type=button class="btn btn-danger">Download</button></a>
         <button type="button" class="btn btn-danger">About labels</button>
         <p>
           <textarea cols="120" rows="10" readonly="readonly">&nbsp;{{model_result}}&nbsp;</textarea>
