--- a/templates/Gene_Disease.html
+++ b/templates/Gene_Disease.html
@@ -133,20 +133,14 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Medical AI LAB @ EWHA</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Collaborative Research Building<br>
+                52, Ewhayeodae-gil, Seodaemun-gu, Seoul<br>
+                Republic of Korea 03760<br><br>
+                <strong>Phone:</strong> +82 2 3277 6945<br>
+                <strong>Email:</strong> choij@ewha.ac.kr<br>
               </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
             </div>
           </div>
 
