--- a/templates/Drug_Drug.html
+++ b/templates/Drug_Drug.html
@@ -210,8 +210,8 @@
             <div class="footer-menu">
               <h4>Menu</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/">Home</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/contact">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -219,9 +219,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <div class="footer-menu">
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="Chemical_Disease.html">Chemical-Disease</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="Drug_Drug.html">Drug-Drug</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="Gene_Disease.html">Gene-Disease</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/Chemical-Disease">Chemical-Disease</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/Drug-Drug">Drug-Drug</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/Gene-Disease">Gene-Disease</a></li>
               </ul>
             </div>
           </div>
