--- a/templates/Gene_Disease.html
+++ b/templates/Gene_Disease.html
@@ -114,7 +114,7 @@
         <h6>EX) MPO genotype GG is associated with <span style="background-color:yellow">@DISEASE$</span> in patients with hereditary <span style="background-color:yellow">@GENE$.</span></h6>
         <div> &nbsp; </div>
         <div class="d-flex justify-content-between align-items-center">
-          <form action="http://localhost:5000/Gene-Disease" method="post" enctype="multipart/form-data">
+          <form action="http://203.255.176.237:5000/Gene-Disease" method="post" enctype="multipart/form-data">
             Select file to upload:
             <input type="file" name="fileToUpload" id="fileToUpload" >
             <input type="submit" value="Upload file" name="submit" class="btn btn-danger" >
