--- a/templates/Drug_Drug.html
+++ b/templates/Drug_Drug.html
@@ -123,16 +123,16 @@
         <div> &nbsp; </div>
         <div id="result_down"></div>
         <script>
-          var str1 = "<a href =";
-          var str2 = "{{result_file}}";
-          var str3 = ' download = "Drug_Drug Relation Extraction Result.txt"><button type=button class="btn btn-danger">Download</button></a>';
+          var str1 = '<a href ="';
+          var str2 = "{{result_file_path}}";
+          var str3 = '" download = "{{result_file_name}}"><button type=button class="btn btn-danger" style="margin-right: 4px">Download</button></a> ';
 
           var $a = $(str1.concat(str2).concat(str3));
+          var $l = $(' <button type="button" id="btn" class="btn btn-danger">About labels</button>')
           $("#result_down").append($a);
+          $("#result_down").append($l);
         </script>
-        <a href = "static/result/DrugDrug_result.txt" download = "Drug_Drug Relation Extraction Result.txt"><button type=button class="btn btn-danger">Download</button></a>
-        
-        <button type="button" id="btn" class="btn btn-danger">About labels</button>
+
         <div id="displayDiv">
           <img src="static/img/slide/ddi_label.png">
         </div>
@@ -178,6 +178,9 @@
             }
           </script>
         </p>
+
+        <h5>Model Performance</h5>
+        f1 score: {{model_performance}}
 
       </div>
     </section>
